fix: make footer spacing and line more rubust
- due to the introduction of the title recently, the selector was not
anymore as robust as it used to be

--- a/src/components/lyne-footer/styles/lyne-footer.component.scss
+++ b/src/components/lyne-footer/styles/lyne-footer.component.scss
@@ -73,7 +73,9 @@
   @include page-spacing__inner;
 }
 
-* + .bottom {
+// Only apply spacing and line if footer bottom has a predecessor, excluding
+// the hidden title which always needs to be there
+:not(.title--visually-hidden) + .bottom {
   margin-block-start: pxToRem(var(--spacing-responsive-xl));
   border-block-start: 1px solid var(--color-cloud-default);
   padding-block-start: pxToRem(var(--spacing-fixed-8x));
